--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="mw7 mt4 mb3 center br2-ns bt bb ba-ns">
       <nav class="bb pv4 tc" aria-label="Main">
         {% for link in site.links %}
-          <a class="link blue hover-mid-gray mh2 pv1"
+          <a class="link silver hover-mid-gray mh2 pv1"
              href="{% unless link.external %}{{ site.url }}{% endunless %}{{ link.url }}">
              {{ link.name }}
            </a>
@@ -28,7 +28,7 @@
         {% if page.title %}
           <div class="mb4">
             {% if page.date %}<div class="fw600 light-silver mt1">{{ page.date | date: "%F" }}</div>{% endif %}
-            <h1 class="ttu f3 mt0 lh-title cb mb2">
+            <h1 class="f3 mt0 lh-title cb mb2">
               {% if is_post %}
               {% endif %}
               {{ page.title }}
@@ -47,7 +47,7 @@
       {% if is_post %}{% include pagination.html %}{% endif %}
     </div>
     <footer class="mw7 center tc pt3 pb4 silver">
-      Built with Jekyll using <a href="http://github.com/muan/scribble" class="link silver hover-blue pv1">Scribble</a>.
+      Built with Jekyll using <a href="http://github.com/muan/scribble" class="link silver hover-mid-gray pv1">Scribble</a>.
     </footer>
   </body>
 </html>
