--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,37 +1,30 @@
 @import "https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css";
-.top-50 { top: 50% }
-
+.top-50 {
+  top: 50%
+}
+.f3 {
+  text-align: center;
+}
 .mt1 {
   margin-top: .25rem;
   margin-bottom: .25rem;
   text-align: center;
 }
-
-.f3 { text-align: center; }
-
 .f6 {
   background-color: #1e1f20;
   color: #d2d3d4;
 }
-
-.blue {
-  color: #1aa8f5;
-}
-
 .pa5-ns {
-  background-color: #28292a !important;
+background-color: #28292a;
 }
-
 .ba-ns {
   border-width: 1px;
   background-color: #28292a;
 }
-
 .bb {
-  color: #28292a;
+  color: #1e1f20;
   border-bottom-width: 1px;
 }
-
 .bt {
   color: #28292a;
   border-top-width: 1px;
@@ -41,6 +34,10 @@
 .markdown-body a {
   text-decoration: none;
   color: #1aa8f5;
+}
+.markdown-body a:hover {
+  color: #555555;
+  transition: color .15s ease-in;
 }
 .markdown-body .highlighter-rouge {
   padding: .25rem .5rem;
