--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 .top-50 {
   top: 50%
 }
@@ -9,6 +8,9 @@
   margin-top: .25rem;
   margin-bottom: .25rem;
   text-align: center;
+}
+.mw7 {
+  max-width: 80rem;
 }
 .f6 {
   background-color: #1e1f20;
