--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -39,15 +39,18 @@ z-index: 1;
   color: #1aa8f5;
 }
 .markdown-body a:hover {
-  color: #555555;
+  color: #444444;
   transition: color .15s ease-in;
 }
 .markdown-body .highlighter-rouge {
   padding: .25rem .5rem;
+  background-color: #444444;
 }
 .markdown-body pre {
   margin: 0;
   overflow: auto;
+  background-color: #444444;
+  color: #d2d3d4
 }
 .markdown-body > .highlighter-rouge,
 .markdown-body > blockquote {
@@ -60,7 +63,7 @@ z-index: 1;
   border-bottom: 1px dotted #CCC;
 }
 .markdown-body blockquote {
-  background: #f9f9f9;
+  background: #444444;
   border-left: .2rem solid #ccc;
   padding-left: 3.8rem;
 }
